# FELBIC-OS-

./: .gitignore  LICENSE  Makefile  README.md  build-wsl.sh  test-qemu.ps1
.aios/: AIOS_DE_PRD_v1.0.docx  AIOS_PRD_v1.0.docx  MEMORY.md  ROADMAP.md  RULES.md
.github/workflows/: build-iso.yml
aisd/: Cargo.toml
aisd/src/: main.rs
aisd/src/acl/: mod.rs
aisd/src/atspi/: mod.rs
aisd/src/browser/: mod.rs
aisd/src/display/: mod.rs
aisd/src/fs/: indexer.rs  mod.rs  watcher.rs
aisd/src/inference/: mod.rs
aisd/src/ipc/: mod.rs
aisd/src/process/: mod.rs
aisd/src/uinput/: mod.rs
aisd/systemd/: aios-firstboot.service
compositor/: meson.build
compositor/protocols/: aios-compositor-v1.xml
compositor/src/: ai_session.c  input.c  main.c  protocol.c  server.c  server.h
desktop/: desktop_shell.py  ipc_client.py  launcher.py  settings.py  top_bar.py
desktop-shell/: index.html  task.md
desktop-shell/components/: dock.html  fix_html.py  notification-center.html  windows.html
desktop-shell/css/: design-tokens.css  style.css
desktop-shell/css/modules/: ai-assistant.css  apps.css  audit-log.css  base.css  calculator.css  calendar.css  clock-app.css  desktop.css  dock.css  launchpad.css  mail-app.css  media-app.css  notes.css  notification-center.css  spotlight.css  tasks-app.css  topbar.css  windows.css
desktop-shell/js/: app.js
desktop-shell/js/modules/: aesthetics.js  ai-assistant.js  aios-agent.js  app-manager.js  browser.js  clock.js  desktop.js  editor.js  files.js  installer.js  launchpad.js  monitor.js  notification-center.js  notifications.js  settings.js  software.js  system-stats.js  terminal.js  window-manager.js
desktop-shell/js/modules/apps/: clock-app.js  media-app.js  notes-app.js  paint-app.js  photos-app.js
docs/roadmap/: FOUNDATION_GAP_AUDIT.md  INDEX.md  PHASE_0_FOUNDATION.md  PHASE_1_INSTALLER.md  PHASE_2_AISD_CORE.md  PHASE_3_LLM.md  PHASE_4_COMPOSITOR.md  PHASE_5_SHELL.md  PHASE_6_BROWSER_AI.md  PHASE_7_RELEASE.md
installer/branding/felbicos/: branding.desc
iso/: packages.x86_64  pacman.conf  profiledef.sh
iso/airootfs/etc/: hostname  issue  mkinitcpio.conf  motd  os-release
iso/airootfs/etc/aios/: autostart.sh  policy.toml
iso/airootfs/etc/calamares/: settings.conf
iso/airootfs/etc/calamares/modules/: felbicos-ai-setup.conf  felbicos-disk.conf  services-systemd.conf
iso/airootfs/etc/fonts/: local.conf
iso/airootfs/etc/plymouth/: plymouthd.conf
iso/airootfs/etc/sway/: config
iso/airootfs/etc/systemd/system/: aisd.service
iso/airootfs/etc/xdg/waybar/: config  style.css
iso/airootfs/root/: customize_airootfs.sh
iso/airootfs/usr/lib/aios/: firstboot-download.sh
iso/airootfs/usr/lib/calamares/modules/felbicos-ai-setup/: main.py  module.desc
iso/airootfs/usr/lib/calamares/modules/felbicos-disk/: main.py  module.desc
iso/airootfs/usr/share/applications/: felbicos-installer.desktop
iso/airootfs/usr/share/calamares/branding/felbicos/: show.qml
iso/airootfs/usr/share/desktop/: dock.py  filemanager.py  styles.css
iso/airootfs/usr/share/desktop-shell/: index.html
iso/airootfs/usr/share/desktop-shell/components/: audit-log.html  clean_html.py  control-center.html  dock.html  final_clean.py  spotlight.html  topbar.html  windows.html
iso/airootfs/usr/share/desktop-shell/css/: design-tokens.css  style.css
iso/airootfs/usr/share/desktop-shell/css/modules/: ai-assistant.css  apps.css  base.css  calculator.css  clock-app.css  control-center.css  desktop.css  dialog.css  dock.css  launchpad.css  settings.css  (+4 more)
iso/airootfs/usr/share/desktop-shell/js/: app.js
iso/airootfs/usr/share/felbicos/calamares/: settings.conf
iso/efiboot/loader/: loader.conf
iso/efiboot/loader/entries/: felbicos.conf
iso/grub/: grub.cfg
iso/syslinux/: archiso_head.cfg  archiso_pxe-linux.cfg  archiso_sys-linux.cfg
models/: model-select.py
steps/: completed.md  next_focus.md
(+43 files in other folders)
