[package]
name = "aisd"
version = "0.1.0"
edition = "2021"
description = "AIOS AI System Daemon — privileged system daemon with LLM inference, filesystem intelligence, and hardware control"
authors = ["AIOS Project"]
license = "MIT"

[[bin]]
name = "aisd"
path = "src/main.rs"

[[bin]]
name = "felbicos-ai"
path = "src/bin/felbicos-ai.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# IPC serialization
rmp-serde = "1"          # msgpack
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Unix sockets
tokio-unix-tcp = "0.1"

# WebSockets
tokio-tungstenite = "0.21"
futures-util = "0.3"

# HTTP Client (for local LLM server communication)
reqwest = { version = "0.12", features = ["json", "stream"] }

# SQLite (file index + embeddings store)
rusqlite = { version = "0.31", features = ["bundled"] }

[target.'cfg(target_os = "linux")'.dependencies]
inotify = { version = "0.10", features = ["stream"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["fs", "process", "signal", "socket", "user"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
